<resources>
    <string name="app_name">VCamp</string>
    <string name="welcome_to_vcamp">Welcome to VCamp</string>
    <string name="login_image">Login Image</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="staff_sign_in">Staff Sign In</string>
    <string name="staff_login">Staff Login</string>
    <string name="student_sign_in">Student Sign In</string>

    <string name="close">close</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="opened">opened</string>
    <string name="closed">closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="update_information">Update Information</string>
    <string name="homepage">Homepage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="time_table"><b><u>Time Table</u></b></string>
    <string name="know_your_leave_status"><b><u>Know Your Leave Status</u></b></string>
</resources>